# mvm

./: .CMakeLists.txt.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile2  README.md  README_J.md  abc.files  build.sh  cmake_install.cmake  dup_test.mvm  hello_world.mvm  main  main_.cpp  make.sh  mvm  run.sh  test.sh
examples/: endless_counting.mvm  hello_world2.mvm
src/: array.hpp  baseobject.cpp  baseobject.hpp  boolean.hpp  class.cpp  class.hpp  classes.cpp  classes.hpp  converters.cpp  converters.hpp  dup_statement.hpp  env.cpp  env.hpp  exception.cpp  exception.hpp  float.hpp  function.cpp  function.hpp  function_arguments.cpp  function_arguments.hpp  heap.cpp  heap.hpp  heapobject.cpp  heapobject.hpp  heapobjects.hpp  int.hpp  interpreter.cpp  interpreter.hpp  lexer.hpp  lineinfo.hpp  logging.hpp  main.cpp  map.cpp  map.hpp  nothing.hpp  optional.hpp  parser.hpp  reference.cpp  reference.hpp  scope.cpp  (+10 more)
src/lang/: leaf.hpp  lexer.hpp  node.hpp  parser.hpp  target.hpp
src/stdlib/: build.rb  io.hpp  logic.hpp  math.hpp  stdlib.hpp  string.hpp  utility.hpp  utils.hpp
tests/: .bashrc  scopes.mvm  stack.mvm  test.rb
tests/compiler/: .test.rb.swp  one_line_function.fail  one_line_function.success  test.rb
tests/mvm/: test.rb
tests/vm/: add_ints.mvm  hello_world.out  scopes.out  test.rb
